Add hackathon prompt and update schedule

--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
             <h2 class="subtitle is-size-4 is-size-3-desktop">
               Suncoast Community High School's Premier Hackathon
             </h2>
-            <h4 class="is-size-5 is-size-4-desktop has-text-weight-bold">January 15th-17th, 8AM-3PM</h4>
+            <h4 class="is-size-5 is-size-4-desktop has-text-weight-bold">January 16th-17th, 8AM-3PM</h4>
           </div>
         </div>
       </section>
@@ -96,68 +96,74 @@
               </thead>
               <tbody>
                 <tr>
-                  <th>8:00 AM</th>
-                  <td>Opening Ceremony/Introduction</td>
+                  <th>7:50 AM</th>
+                  <td>Opening Ceremony / Introduction</td>
                   <td>The program team and MC will do introductions and discuss the purpose behind the event.</td>
                 </tr>
 
                 <tr>
-                  <th>8:45 AM</th>
-                  <td>Team Selection Begins</td>
-                  <td>Upon the last introduction the MC will allow the students to break for team selection. Teams of 5-7 will be put together.</td>
+                  <th>8:10 AM</th>
+                  <td>Team Creation</td>
+                  <td>Upon the last introduction the MC will allow the students to break for team selection. Teams of 5 will break into their brainstorming session.</td>
                 </tr>
 
                 <tr>
-                  <th>9:00 AM</th>
+                  <th>8:15 AM</th>
                   <td>What are we trying to solve?</td>
                   <td>The teams will find out what problem they are tasked with solving.</td>
                 </tr>
 
                 <tr>
-                  <th>9:05 AM</th>
+                  <th>8:20 AM</th>
                   <td>Mentor Introductions</td>
                   <td>Mentors will be placed throughout the auditorium and the students will have the opportunity to draft their team’s mentor who will assist them throughout the process.</td>
                 </tr>
 
                 <tr>
-                  <th>9:30 AM</th>
+                  <th>8:25 AM</th>
                   <td>Let The Games Begin!</td>
                   <td>Development begins.</td>
                 </tr>
 
                 <tr>
                   <th>10:30 AM</th>
-                  <td>Snacks</td>
-                  <td>Water, fruit, granola bars, etc. will be available so the students can snack and work.</td>
+                  <td>Developer Talk</td>
+                  <td>Students will take a short break from developing. The break will include a hands on dev talk where a current industry developer will teach the students how to use "Git", which is an industry tool vital to a development team.</td>
+                </tr>
+
+                <tr>
+                  <th>10:50 AM</th>
+                  <td>Off to the Races</td>
+                  <td>Development begins again.</td>
                 </tr>
 
                 <tr>
                   <th>11:45 AM</th>
-                  <td>1st Break / TED Talk #1</td>
-                  <td>The Art of Failure (8 minute TED Talk) will be shown and a short discussion will follow.</td>
-                </tr>
-
-                <tr>
-                  <th>12:05 PM</th>
-                  <td>Chat and Crew</td>
+                  <td>Chat and Chew</td>
                   <td>Students will have the opportunity to eat and talk to professionals in the STEAM field and notable Suncoast Alumni.</td>
                 </tr>
 
                 <tr>
-                  <th>1:10 PM</th>
+                  <th>12:30 PM</th>
                   <td>Get Back to Work</td>
                   <td>Teams will continue to develop their solutions.</td>
                 </tr>
 
                 <tr>
-                  <th>2:25 PM</th>
-                  <td>2nd Break / TED Talk #2</td>
-                  <td></td>
+                  <th>1:40 PM</th>
+                  <td>1st Break / TED Talk #1</td>
+                  <td>The Art of Failure (8 minute TED Talk) will be shown and a short discussion will follow.</td>
                 </tr>
 
                 <tr>
-                  <th>2:35 PM</th>
-                  <td>Pack Up</td>
+                  <th>1:50 PM</th>
+                  <td>Resume Work</td>
+                  <td>The students will resume working on their projects.</td>
+                </tr>
+
+                <tr>
+                  <th>2:30 PM</th>
+                  <td>Students Pack Up</td>
                   <td>The students will pack up and get ready for their dismissal.</td>
                 </tr>
               </tbody>
@@ -177,51 +183,69 @@
               </thead>
               <tbody>
                 <tr>
-                  <th>8:00 AM</th>
+                  <th>7:40 AM</th>
                   <td>Hacking Begins</td>
                   <td>Teams get back to work with their mentors while a light breakfast is served.</td>
                 </tr>
 
                 <tr>
-                  <th>9:45 AM</th>
+                  <th>9:05 AM</th>
                   <td>Break / Activity</td>
                   <td>Health related activity occurs, something light to get the blood pumping and to keep the students engaged.</td>
                 </tr>
 
                 <tr>
-                  <th>10:05 AM</th>
+                  <th>9:10 AM</th>
+                  <td>Developer Talk</td>
+                  <td>Students will take a short break from developing. The break will include a hands on dev talk where a current industry developer will teach the students how to create a "Hello World" application in Node.js.</td>
+                </tr>
+
+                <tr>
+                  <th>9:30 AM</th>
                   <td>Get Back to Work</td>
                   <td>Work resumes while snacks are brought out.</td>
                 </tr>
 
                 <tr>
-                  <th>11:30 AM</th>
-                  <td>Break #1 / TED Talk #3</td>
-                  <td></td>
+                  <th>10:30 AM</th>
+                  <td>Developer Talk</td>
+                  <td>Students will take a short break from developing. The break will include a hands on dev talk where a current industry developer will teach the students how to create a "Hello World" program in the Groovy programming language.</td>
                 </tr>
 
                 <tr>
-                  <th>12:00 PM</th>
-                  <td>Lunch</td>
-                  <td>Teams will eat and wrap up their work.</td>
+                  <th>10:45 AM</th>
+                  <td>Resume Work</td>
+                  <td>The students will resume working on their projects.</td>
                 </tr>
 
                 <tr>
-                  <th>1:00 PM</th>
-                  <td>Presentations</td>
+                  <th>11:25 AM</th>
+                  <td>Working Lunches</td>
+                  <td>Lunch is brought out and students will have working lunches with their mentors as they wrap up their presentations.</td>
+                </tr>
+
+                <tr>
+                  <th>12:30 PM</th>
+                  <td>Final Presentation Preparation</td>
                   <td>Teams will finish their projects from the past two days and get ready to present their solutions.</td>
+                </tr>
+
+                <tr>
+                  <th>12:45 PM</th>
+                  <td>Presentations Begin</td>
+                  <td>Each student group will have 3-5 minutes to present their POC that they’ve created.</td>
                 </tr>
 
                 <tr>
                   <th>2:05 PM</th>
                   <td>Judges Deliberation</td>
-                  <td>As the judges deliberate on the awards, the MC will have a talk prepared for the students.</td>
+                  <td>As the judges deliberate on the awards, the #HackSuncoast Team will have a recap assembly with the students, answer questions, and conduct surveys.</td>
                 </tr>
 
                 <tr>
-                  <th>2:25 PM</th>
+                  <th>2:30 PM</th>
                   <td>Awards Ceremony</td>
-                  <td>After hard deliberation, the judges will announce the winners in the various categories.</td>
+                  <td>After hard deliberation, the judges will announce the winners in the various categories and hand out awards.</td>
                 </tr>
 
                 <tr>
