Change groovy to python

--- a/app/index.html
+++ b/app/index.html
@@ -209,7 +209,7 @@
                 <tr>
                   <th>10:30 AM</th>
                   <td>Developer Talk</td>
-                  <td>Students will take a short break from developing. The break will include a hands on dev talk where a current industry developer will teach the students how to create a "Hello World" program in the Groovy programming language.</td>
+                  <td>Students will take a short break from developing. The break will include a hands on dev talk where a current industry developer will teach the students how to create a "Hello World" program in the Python programming language.</td>
                 </tr>
 
                 <tr>
