Update homepage and add sponsors

--- a/app/index.html
+++ b/app/index.html
@@ -30,8 +30,10 @@
     <div id="navbar-menu" class="navbar-menu">
       <div class="navbar-end">
         <a href="#about" class="navbar-item">About</a>
-        <a href="#why" class="navbar-item">Why</a>
         <a href="#schedule" class="navbar-item">Schedule</a>
+        <a href="#devtalks" class="navbar-item">Dev Talks</a>
+        <a href="#surveys" class="navbar-item">Surveys</a>
+        <!-- <a href="#mentors" class="navbar-item">Mentors</a> -->
         <a href="#sponsors" class="navbar-item">Sponsors</a>
       </div>
     </div>
@@ -50,7 +52,7 @@
             <h2 class="subtitle is-size-4 is-size-3-desktop">
               Suncoast Community High School's Premier Hackathon
             </h2>
-            <h4 class="is-size-5 is-size-4-desktop has-text-weight-bold">January 16th-17th, 8AM-3PM</h4>
+            <h4 class="is-size-5 is-size-4-desktop has-text-weight-bold">January 16th-17th, 7:30AM-2:40PM</h4>
           </div>
         </div>
       </section>
@@ -59,23 +61,11 @@
         <div class="container content">
           <h1 class="title" id="about">About</h1>
 
-          <p><strong>#HackSuncoast is the Suncoast Community High School's Premier Hackathon where we aim to bring 11th and 12th grade Computer Science students together to design, code, create, and hack an idea around healthcare and how they can better connect their communities to healthcare service providers.</strong></p>
+          <p><strong>#HackSuncoast is the Suncoast Community High School's Premier Hackathon where we aim to bring 11th and 12th grade students together to design, code, create, and hack an idea around healthcare and how they can better connect their communities to healthcare service providers.</strong></p>
 
           <p>No prior experience as far as hackathons, wireframing, or even coding is necessary. They will learn new coding practices, be introduced to new languages & development tools, as well as be connected to mentors from the industry who will help cultivate their desires to learn more about various coding practices and bring their solutions to a tangible state.</p>
 
           <p>This experience will allow them to see how enterprise developers and businesses come up with and create various applications and technological solutions that they implement within the business. This hands on experience will give them work in the real world of a programmer, and teach them concepts that they might not gain from a typical class lecture or assignment.</p>
-        </div>
-      </section>
-
-      <section class="section">
-        <div class="container content">
-          <h1 class="title" id="why">Why</h1>
-
-          <p>In a world where technology is advancing, there is a huge disconnect between school technology curriculum and what is actually used and valued in the industry. Careers in Information Technology are not normally talked about or even acknowledged in day to day conversations, such as the frequent suggesting of careers as a professional athlete, lawyer, or doctor.</p>
-
-          <p>We’ve noticed that the STEM awareness in our local schools, but most importantly our High School, is slowly decreasing and needs a breath of fresh air and excitement to captivate the students’ interest in the magnet program. As it pertains to Suncoast High School in particular, there have been many changes to the Computer Science program that have caused students to become disinterested in the program and overlook the importance of the skills that they are actually gaining by being a part of this progressive, one of a kind magnet experience.</p>
-
-          <p><strong>We want to bring the spark back to the Suncoast Computer Science program as we challenge the students who have a passion in cultivating technology to think outside the box. We want to show these students that they are in a program that is truly unique that can equip them with the tools necessary to have prosperous careers in IT.</strong></p>
         </div>
       </section>
 
@@ -259,13 +249,63 @@
         </div>
       </section>
 
+      <section class="section">
+        <div class="container content">
+          <h1 class="title" id="devtalks">Dev Talks</h1>
+
+          <p>You can find more information about setting up your machine for the developer talks at the following link!</p>
+
+          <a href="https://github.com/HackSuncoast/hack-suncoast-dev-talks" target="_blank" class="btn">Developer Talk Information</a>
+        </div>
+      </section>
+
+      <section class="section">
+        <div class="container content">
+          <h1 class="title" id="surveys">Surveys</h1>
+
+          <p>Please take our surveys by using the following links!</p>
+
+          <a href="https://docs.google.com/forms/d/1dPWVxrpvqJDLpoHSu7FsySiM8DVZMc5KREuiO4uNS34/viewform?edit_requested=true" target="_blank" class="btn">Pre-Survey</a>
+
+          <!-- <a href="https://docs.google.com/forms/d/1dPWVxrpvqJDLpoHSu7FsySiM8DVZMc5KREuiO4uNS34/viewform?edit_requested=true" target="_blank" class="btn">Post-Survey</a> -->
+
+        </div>
+      </section>
+
+      <!-- <section class="section">
+        <div class="container content">
+          <h1 class="title" id="mentors">Mentors</h1>
+
+          <ul>
+            <li></li>
+          </ul>
+        </div>
+      </section> -->
+
       <section class="section sponsors">
         <div class="container content">
           <h1 class="title" id="sponsors">Sponsors</h1>
 
           <p><strong>We would like to give a HUGE shout out to the following sponsors for helping us bring this event to reality!</strong></p>
 
-          <img src="./images/jnj-logo.png" alt="J&J Logo" />
+          <div class="sponsors-grid">
+            <div class="sponsor">
+              <h3>Johnson and Johnson</h3>
+              <img src="./images/jnj-logo.png" alt="J&J Logo" />
+            </div>
+            <div class="sponsor">
+              <h3>NextEra Energy</h3>
+              <img src="./images/next-era-logo.jpg" alt="NextEra Energy Logo" />
+            </div>
+            <div class="sponsor">
+              <h3>West Palm Beach Alumni Chapter of Kappa Alpha Psi</h3>
+              <img src="./images/kappa-logo.png" alt="West Palm Beach Alumni Chapter of Kappa Alpha Psi Logo" />
+            </div>
+            <div class="sponsor">
+              <h3>Florida Power & Light Company (FPL)</h3>
+              <img src="./images/fpl-logo.jpg" alt="Florida Power & Light Company (FPL) Logo" />
+            </div>
+          </div>
         </div>
       </section>
     </main>
